--- a/index.html
+++ b/index.html
@@ -2359,33 +2359,42 @@ Versátil, eficiente e fácil de usar em casa.
 </div>
 </div>
   
-<div id="kits" class="categoria">
+<!-- ABA KITS DE LIMPEZA -->
+<div id="aba-kits" class="aba">
+  <h2>🧺 Kits de Limpeza</h2>
+  <p class="descricao-aba">
+    Kits completos com os produtos mais usados no dia a dia, com preço especial.
+  </p>
+  <div class="produtos">
 
-  <h2>🧼 Kits de Limpeza</h2>
+<div class="produto kit"
+     data-nomes="kit limpeza completo, limpeza casa, produtos limpeza, desconto">
 
-  <p style="
-    text-align:center;
-    font-size:18px;
-    font-weight:bold;
-    color:#ff9800;
-    margin-bottom:15px;
-  ">
-    🚧 Estamos em reforma 🚧
+  <img src="img/kit-limpeza-completo.jpg" alt="Kit de Limpeza Completo">
+  <span class="icone-busca">🔍</span>
+
+  <h3>Kit de Limpeza Completo</h3>
+  <p class="kit-desc">
+    Sabão Líquido, Amaciante, Veja Multiuso, Desinfetante,
+    Cândida (limpeza geral), Cândida Colorida (para roupas),
+    Álcool Perfumado, Pedra Sanitária, Vassoura de Canto, Rodo Médio,
+    Esponja, Pano de Chão, Pano de Prato e Saco de Lixo.
   </p>
 
-  <div style="text-align:center;">
-    <img 
-      src="img/reformas.jpg"
-      alt="Aba Kits de Limpeza em reforma"
-      style="
-        max-width:100%;
-        width:320px;
-        border-radius:14px;
-        box-shadow:0 6px 16px rgba(0,0,0,.25);
-      "
-    >
+  <div class="variacoes">
+    <div class="linha">
+      <span>
+        <del>R$ 150,50</del>
+        <strong> R$ 130,00</strong>
+      </span>
+      <button onclick="addProduto('Kit de Limpeza Completo',130)">
+        Adicionar
+      </button>
+    </div>
   </div>
+</div>
 
+  </div>
 </div>
 
 <!-- CASA -->
