--- a/index.html
+++ b/index.html
@@ -1108,6 +1108,15 @@ input[type="search"]::-webkit-search-cancel-button {
   -webkit-appearance: none;
 }
 
+  .aviso-kits {
+  background: #fff3cd;
+  color: #856404;
+  padding: 10px;
+  border-radius: 6px;
+  font-size: 14px;
+  margin-bottom: 15px;
+}
+
 </style>
 </head>
 
@@ -2362,6 +2371,9 @@ Versátil, eficiente e fácil de usar em casa.
 <!-- ABA KITS DE LIMPEZA -->
 <div id="aba-kits" class="aba">
   <h2>🧺 Kits de Limpeza</h2>
+  <div class="aviso-kits">
+  ⚠️ Atenção: Kits de Limpeza com pagamento apenas via <strong>PIX ou Dinheiro</strong>.
+  </div>
   <p class="descricao-aba">
     Kits completos com os produtos mais usados no dia a dia, com preço especial.
   </p>
