--- a/index.html
+++ b/index.html
@@ -2379,7 +2379,7 @@ Versátil, eficiente e fácil de usar em casa.
   </p>
   <div class="produtos">
 
-<div class="produto kit"
+<div class="produto kit kits"
      data-nomes="kit limpeza completo, limpeza casa, produtos limpeza, desconto">
 
   <img src="img/kit-limpeza-completo.jpg" alt="Kit de Limpeza Completo">
