--- a/index.html
+++ b/index.html
@@ -2406,6 +2406,32 @@ Versátil, eficiente e fácil de usar em casa.
   </div>
 </div>
 
+<div class="produto kit kits"
+     data-nomes="kit limpeza simples, limpeza casa, produtos limpeza, desconto">
+
+  <img src="img/kit-limpeza-simples.jpg" alt="Kit de Limpeza Simples">
+  <span class="icone-busca">🔍</span>
+
+  <h3>Kit de Limpeza Simples</h3>
+  <p class="kit-desc">
+    Sabão Líquido, Amaciante, Detergente, Candida, 
+    Candida Colorida, Veja Multiuso e Desinfetante 
+  </p>
+
+  <div class="variacoes">
+    <div class="linha">
+      <span>
+        <del>R$ 67,00</del>
+        <strong> R$ 60,00</strong>
+      </span>
+      <button onclick="addProduto('Kit de Limpeza Simples',60)">
+        Adicionar
+      </button>
+    </div>
+  </div>
+</div>
+    
+    
   </div>
 </div>
 
