--- a/index.html
+++ b/index.html
@@ -1166,7 +1166,7 @@ input[type="search"]::-webkit-search-cancel-button {
   <div class="linha-abas">
     <button onclick="mostrarCategoria('banheiro',this)">Banheiro</button>
     <button onclick="mostrarCategoria('essencias',this)">Essências</button>
-    <button onclick="mostrarCategoria('kits',this)">🧼 Kits de Limpeza</button>
+   <button onclick="mostrarCategoria('aba-kits',this)">🧼 Kits de Limpeza</button>
   </div>
 
   <div class="linha-abas">
@@ -2369,7 +2369,7 @@ Versátil, eficiente e fácil de usar em casa.
 </div>
   
 <!-- ABA KITS DE LIMPEZA -->
-<div id="aba-kits" class="aba">
+<div id="aba-kits" class="categoria">
   <h2>🧺 Kits de Limpeza</h2>
   <div class="aviso-kits">
   ⚠️ Atenção: Kits de Limpeza com pagamento apenas via <strong>PIX ou Dinheiro</strong>.
