--- a/index.html
+++ b/index.html
@@ -4165,15 +4165,15 @@ Assim que confirmarmos, preparamos tudo com carinho para você 🙏✨
     "https://wa.me/5515997647804?text=" + msgFinal,
     "_blank"
   );
-}
 
-  // MOSTRA TELA DE SUCESSO IMEDIATAMENTE
-  document.getElementById("telaSucesso").style.display = "flex";
+  // MOSTRA TELA DE SUCESSO
+document.getElementById("telaSucesso").style.display = "flex";
 
-  // LIMPA CARRINHO DEPOIS
-  carrinho = [];
-  atualizar();
-  fecharModal();
+// LIMPA CARRINHO
+carrinho = [];
+atualizar();
+fecharModal();
+
 }
 
   function voltarComprar() {
