--- a/index.html
+++ b/index.html
@@ -2799,7 +2799,7 @@ Versátil, eficiente e fácil de usar em casa.
   <span class="icone-busca">🔍</span>
 <h3>Porta Detergente</h3>
 <p class="estoque" id="estoque-porta-detergente">
-  📦 Estoque: --
+  📦 Estoque: 10
 </p>
 <div class="variacoes">
   <div class="linha">
